<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_task">Add</string>
    <string name="title_activity_activity_new_task">activity_new_task</string>
    <string name="title_activity_new_task">NewTask</string>
    <string name="accept">Accept</string>
    <string name="for_2_weeks">For 2 weeks:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <!-- new purchase -->
    <string name="pch_name_help">Вид покупки</string>
    <string name="pch_detail_help">Детали покупки</string>
    <string name="pch_date_help">Дата</string>
    <string name="task_date_help">Дата</string>
    <string name="title_activity_new_purchase">New purchase</string>
    <string name="title_activity_template_picker">TemplatePickerActivity</string>

    <string name="temp_picker">Pick template</string>
    <string name="edit_rules">Edit rules</string>
    <string name="statistic">Statistic</string>
    <string name="accounts">Accounts</string>
    <string name="title_activity_rules_editor">RulesEditorActivity</string>
    <string name="title_activity_rule_editor">RuleEditorActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_statistic">Statistic</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_account_edit">AccountEditActivity</string>

</resources>
